<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="#ffffff"
        android:tintMode="multiply"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/regular_margin"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textColor="@color/colorAccent"
                android:textColorHint="#a1887f" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/regular_margin"
                android:text="@string/toppings"
                android:textAllCaps="true"
                android:textColor="#a1887f" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/regular_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/has_w_cream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/breathing_margin"
                        android:buttonTint="@color/colorPrimary" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whipped_cream" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/has_chocolate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/breathing_margin"
                        android:buttonTint="@color/colorPrimary" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chocolate"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/regular_margin"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textColor="#a1887f" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/regular_margin"
                android:orientation="horizontal">

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/button_properties"
                    android:onClick="increment"
                    android:text="+" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/breathing_margin"
                    android:text="0" />

                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/button_properties"
                    android:onClick="decrement"
                    android:text="-" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                style="@style/ButtonStyle"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/regular_margin"
                android:background="@drawable/button_properties"
                android:onClick="submitOrder"
                android:text="@string/order" />

            <TextView
                android:id="@+id/order_summary_text_view"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/regular_margin" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>